chore: add illustrate images

--- a/roman-empire/kg-rag.ipynb
+++ b/roman-empire/kg-rag.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "Let's explore how this approach can provide richer insights into the history of the Roman Empire!\n",
     "\n",
-    "<img src='./kg-rag-process.png'>"
+    "<img src='./images/overview.png'>"
    ]
   },
   {
@@ -134,6 +134,16 @@
     "    username=NEO4J_USERNAME,\n",
     "    password=NEO4J_PASSWORD,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86c8aa3e",
+   "metadata": {},
+   "source": [
+    "## Steps\n",
+    "\n",
+    "<img src=\"./images/steps.png\" />"
    ]
   },
   {
@@ -283,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "9ade6e3d",
    "metadata": {},
    "outputs": [
@@ -299,8 +309,18 @@
     }
    ],
    "source": [
-    "# Create graph retriever\n",
+    "# Create graph fulltext index\n",
     "kg.query('CREATE FULLTEXT INDEX entity IF NOT EXISTS FOR (e:__Entity__) ON EACH [e.id]')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c75eb3df",
+   "metadata": {},
+   "source": [
+    "## Graph Retrieval - Flow:\n",
+    "\n",
+    "<img src=\"./images/flow.png\" />"
    ]
   },
   {
